log
Fri 17 Mar 2023 05:28:07 PM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   16 |   int temp=*a
      |            ~~
      |            |
      |            int
   17 |   *a=*b
      |   ^
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   *a=*b
      |      ~~
      |      |
      |      int
   18 |   *b=temp
      |   ^
exercises.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
exercises.c: In function ‘crearPersona’:
exercises.c:58:22: error: returning ‘int’ from a function with return type ‘Persona *’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |   if(p==NULL) return EXIT_FAILURE;
      |                      ^~~~~~~~~~~~
test.c: In function ‘swap’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ddcd464
Fri 17 Mar 2023 05:29:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:3: error: invalid operands to binary * (have ‘int *’ and ‘int *’)
   17 |   *a=*b
      |   ^
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   *a=*b
      |      ~~
      |      |
      |      int
   18 |   *b=temp
      |   ^
exercises.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
exercises.c: In function ‘crearPersona’:
exercises.c:58:22: error: returning ‘int’ from a function with return type ‘Persona *’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |   if(p==NULL) return EXIT_FAILURE;
      |                      ^~~~~~~~~~~~
test.c: In function ‘swap’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c2f284e
Fri 17 Mar 2023 05:29:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:12: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   int temp=a
      |            ^
exercises.c:17:3: error: expected ‘,’ or ‘;’ before ‘a’
   17 |   a=*b
      |   ^
exercises.c: In function ‘crearPersona’:
exercises.c:58:22: error: returning ‘int’ from a function with return type ‘Persona *’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |   if(p==NULL) return EXIT_FAILURE;
      |                      ^~~~~~~~~~~~
test.c: In function ‘swap’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:16:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   16 |   int temp=a
      |       ^~~~
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
43d268a
